--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -5,7 +5,7 @@ body {
 .wide {
   width:100%;
   height:200px;
-  background-image:url('../images/charcuterie-plate.jpg');
+  background-image:url('../assets/images/header.jpg');
   background-size:cover;
 }
 
